fix gutter spacing

--- a/src/css/main.module.less
+++ b/src/css/main.module.less
@@ -250,7 +250,6 @@
 	section.module {
 		border-radius: @docs-module-padding;
 		margin-bottom: 1em;
-		overflow: hidden;	// To support margins on internal components
 
 		// Set margins on all of the top-level elements uniformly
 		p, pre,
