--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -2,7 +2,7 @@
 //
 
 @docs-site-max-width: 960px;
-@docs-site-edge-keepout: 15px;
+@docs-site-edge-keepout: 24px;
 @docs-module-padding: 12px;
 @docs-anchor-width: 20px;
 
